--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,22 @@ nav ul li a:hover {
 main {
     padding: 2rem;
 }
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
